[gd_scene load_steps=9 format=3 uid="uid://clskeeqtgb4n1"]

[ext_resource type="Script" uid="uid://dpvctyukh8gvf" path="res://scenes/popcorn.gd" id="1_470fe"]
[ext_resource type="Shader" uid="uid://clah7cc6lp7d5" path="res://burn.gdshader" id="2_dg4de"]
[ext_resource type="Texture2D" uid="uid://dirt5gudndlbb" path="res://assets/sprites/kernel.png" id="3_eqyda"]
[ext_resource type="AudioStream" uid="uid://ll5adl5tdwxu" path="res://assets/audio/pop.ogg" id="4_kv8y0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sehtb"]
bounce = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sehtb"]
resource_local_to_scene = true
shader = ExtResource("2_dg4de")
shader_parameter/darkness = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_irqna"]
radius = 16.6667

[sub_resource type="Gradient" id="Gradient_sehtb"]
colors = PackedColorArray(1, 0.9505, 0.00999999, 1, 1, 1, 1, 1)

[node name="Node2D" type="RigidBody2D"]
mass = 0.5
physics_material_override = SubResource("PhysicsMaterial_sehtb")
script = ExtResource("1_470fe")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_sehtb")
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_eqyda")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.3, 0.3)
shape = SubResource("CircleShape2D_irqna")

[node name="CookingTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="BurningTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="OilBubbles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.2
emission_shape = 1
emission_sphere_radius = 11.34
gravity = Vector2(0, -980)
scale_amount_min = 2.0
scale_amount_max = 3.0

[node name="BurnSmoke" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.28
emission_shape = 1
emission_sphere_radius = 11.34
gravity = Vector2(0, -980)
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0.67, 0.640185, 0.0737, 1)
color_ramp = SubResource("Gradient_sehtb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kv8y0")
bus = &"SFX"

[connection signal="timeout" from="CookingTimer" to="." method="_on_cooking_timer_timeout"]
[connection signal="timeout" from="BurningTimer" to="." method="_on_burning_timer_timeout"]
